<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SJICC</string>
    <string name="how_was_your_child_s_treated">How was your child\'s treatment?</string>
    <string name="how_was_the_food">How was the food?</string>
    <string name="was_the_facility_clean">Was the facility clean?</string>
    <string name="submit">Submit</string>
    <string name="feedback_form">Feedback Form</string>
</resources>