<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:layout_marginBottom="264dp"
        android:padding="10dp"
        android:text="@string/feedback_form"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/b2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:layout_marginBottom="144dp"
        android:background="@drawable/et_style"
        android:padding="10dp"
        android:text="@string/how_was_your_child_s_treated"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/b2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/b1"
        android:layout_width="46dp"
        android:layout_height="35dp"
        android:layout_marginBottom="640dp"
        android:background="@drawable/ic_speaker"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="30dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageButton
            android:id="@+id/e1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="120dp"
            android:background="@drawable/emoji1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.043"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/e2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="120dp"
            android:background="@drawable/emoji2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.043"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/e3"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="120dp"
            android:background="@drawable/emoji3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.043"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/e4"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="120dp"
            android:background="@drawable/emoji4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.043"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/e5"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="120dp"
            android:background="@drawable/emoji5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.043"
            app:layout_constraintStart_toStartOf="parent" />

    </LinearLayout>

    <TextView
        android:id="@+id/txt2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="138dp"
        android:layout_marginBottom="138dp"
        android:background="@drawable/et_style"
        android:padding="10dp"
        android:text="@string/how_was_the_food"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/b3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt1" />

    <ImageButton
        android:id="@+id/b2"
        android:layout_width="46dp"
        android:layout_height="0dp"
        android:layout_marginBottom="141dp"

        android:background="@drawable/ic_speaker"
        app:layout_constraintBottom_toTopOf="@+id/b3"
        app:layout_constraintEnd_toEndOf="@+id/b1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/b1"
        app:layout_constraintTop_toBottomOf="@+id/txt1" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/head"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/e11"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="310dp"
            android:background="@drawable/emoji1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.043"
            app:layout_constraintStart_toStartOf="parent" />


        <ImageButton
            android:id="@+id/e12"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="310dp"
            android:background="@drawable/emoji2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.043"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/e13"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="310dp"
            android:background="@drawable/emoji3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.043"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/e14"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="310dp"
            android:background="@drawable/emoji4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.043"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/e15"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="310dp"
            android:background="@drawable/emoji5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.043"
            app:layout_constraintStart_toStartOf="parent" />

    </LinearLayout>


    <TextView
        android:id="@+id/txt3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="138dp"
        android:background="@drawable/et_style"
        android:padding="10dp"
        android:text="@string/was_the_facility_clean"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt2" />


    <ImageButton
        android:id="@+id/b3"
        android:layout_width="46dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="276dp"
        android:background="@drawable/ic_speaker"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/txt3"
        app:layout_constraintTop_toBottomOf="@+id/b2" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/head"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/e21"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="510dp"
            android:background="@drawable/emoji1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.043"
            app:layout_constraintStart_toStartOf="parent" />


        <ImageButton
            android:id="@+id/e22"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="510dp"
            android:background="@drawable/emoji2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.043"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/e23"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="510dp"
            android:background="@drawable/emoji3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.043"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/e24"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="510dp"
            android:background="@drawable/emoji4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.043"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/e25"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="510dp"
            android:background="@drawable/emoji5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.043"
            app:layout_constraintStart_toStartOf="parent" />

    </LinearLayout>

    <Button
        android:id="@+id/submitButton"
        android:layout_width="252dp"
        android:layout_height="49dp"
        android:layout_marginTop="157dp"
        android:background="@drawable/button_border"
        android:padding="8dp"
        android:text="@string/submit"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt3" />

</androidx.constraintlayout.widget.ConstraintLayout>